--- a/src/Components/WorkExperience/WorkExperience.css
+++ b/src/Components/WorkExperience/WorkExperience.css
@@ -19,36 +19,37 @@
   padding-left: 1rem;
 }
 
-.experienceDetails .companyName {
+.workExperienceCard .companyName {
   font-size: 2rem;
   /* font-style: italic; */
   font-weight: 700;
 }
 
-.experienceDetails .duration {
+.workExperienceCard .duration {
   font-size: 1.4rem;
     font-weight: 500;
     font-style: italic;
 }
 
-.experienceDetails .jobTitle {
+.workExperienceCard .jobTitle {
   font-size: 1.4rem;
   font-style: italic;
   margin-bottom: 0.5rem;
 }
 
-.experienceDetails .workItems-Heading {
+.workExperienceCard .workItems-Heading {
   font-size: 1.6rem;
   font-weight: bold;
   margin-bottom: 0;
 }
 
-.experienceDetails .place {
+.workExperienceCard .place {
   font-size: 1.6rem;
   text-align: end;
 }
 
-.experienceDetails ul {
+.workExperienceCard ul {
+  list-style-position: inside;
   /* list-style: none; */
   font-size: 1.4rem;
   font-weight: 500;
