fix experience list

--- a/src/Components/WorkExperience/WorkExperience.css
+++ b/src/Components/WorkExperience/WorkExperience.css
@@ -54,3 +54,11 @@
   font-size: 1.4rem;
   font-weight: 500;
 }
+
+.workDescriptionItemHeading {
+  font-weight: 700;
+}
+
+.workDescriptionItemHeading li {
+  padding-left: 1rem;
+}
